--- a/www/www/src/main/resources/templates/admin/admin_main_index.html
+++ b/www/www/src/main/resources/templates/admin/admin_main_index.html
@@ -141,7 +141,7 @@
         </div>
 
         <!-- 상품등록 관련 -->
-        <a th:href="@{/admin/admin_menu}">
+        <a th:href="@{/admin/admin_product}">
         <div class="row menu_info">
             <div class="menu_title">
                 <strong><h3>Product</h3></strong>
