--- a/www/www/src/main/resources/templates/community/event.html
+++ b/www/www/src/main/resources/templates/community/event.html
@@ -12,13 +12,13 @@
             <div class="content-top_list">
                 <ul>
                     <li>
-                        <a th:href="@{/comm/announcement}"><strong>AboutUs</strong></a>
+                        <a th:href="@{/community/announcement}"><strong>AboutUs</strong></a>
                     </li>
                     <li>
-                        <a th:href="@{/comm/qna}"><strong>Q&A</strong></a>
+                        <a th:href="@{/community/qna}"><strong>Q&A</strong></a>
                     </li>
                     <li>
-                        <a th:href="@{/comm/event}"><strong>EVENT</strong></a>
+                        <a th:href="@{/community/event}"><strong>EVENT</strong></a>
                     </li>
                 </ul>
             </div>
