--- a/www/www/src/main/resources/templates/member/myPage_info.html
+++ b/www/www/src/main/resources/templates/member/myPage_info.html
@@ -13,9 +13,9 @@
                         <div class="row justify-content-md-center myPage_main">
                             <div class="col col-lg-2 myPage_menu">
                                 <ul>
-                                    <li><a th:href="@{/member/myPage_reserve}"><strong>주문 조회</strong></a></li>
+                                    <li><a th:href="@{/member/myPage_reserve}"><strong>주문내역</strong></a></li>
                                     <li><a th:href="@{/member/myPage_point}"><strong>적립금</strong></a></li>
-                                    <li><a th:href="@{/member/myPage_ask}"><strong>1:1 문의</strong></a></li>
+                                    <li><a th:href="@{/member/myPage_ask}"><strong>1:1문의</strong></a></li>
                                     <li><a th:href="@{/member/myPage_info}"><strong>내 정보</strong></a></li>
                                     <li><a data-bs-toggle="modal" data-bs-target="#staticBackdrop"><strong>회원탈퇴</strong></a></li>
 
