--- a/www/www/src/main/resources/templates/review/reviewPage.html
+++ b/www/www/src/main/resources/templates/review/reviewPage.html
@@ -4,35 +4,65 @@
     <th:block th:fragment="content">
         <link rel="stylesheet" th:href="@{/dist/css/reviewPage.css}">
         <div class="rp_container">
-            <form>
-                <div class="top_image">
-                    <div class="test_image">
-                        <img th:src="@{|/dist/image/${tvo.image}|}">
-                    </div>
+            <div class="teacher_name">매니저 이름: <span th:text="${tvo.name}" class="top_name"></span></div>
+            <div class="top_image">
+                <div class="review_image" th:data-tno="${tvo.tno}">
+                    <img th:src="@{|/dist/image/${tvo.image}|}" class="review_teacher">
                 </div>
-                <div class="review">
-                    댓글 들어갈곳
-                    <!--comment 등록 라인-->
-                    <!--post라인-->
-                    <div class="input-group mb-3">
-                        <span class="input-group-text" id="cmtWriter">anymore</span>
-                        <br>
-                        <input type="text" id="cmtText" class="form-control" placeholder="Add Comment..."
-                               aria-label="Username" aria-describedby="basic-addon1">
-                        <button type="button" id="cmtAddBtn" class="btn btn-secondary">post</button>
-                    </div>
-                    <!--spred 라인-->
-                    <!-- 댓글 목록 영역 -->
-                    <ul class="list-group list-group-flush" id="cmtListArea">
-                        <li class="list-group-item">
-                            <div class="fw-bold writer">Writer</div>
-                            <div class="content">content</div>
-                            <span class="badge rounded-pill text-bg-warning">regDate</span>
-                        </li>
-                    </ul>
-                </div>
-            </form>
+            </div>
         </div>
+        <div class="manager-list">
+            <ul>
+                다른매니저를 선택해보세요:
+                <li th:each="teacher : ${teacherList}">
+                    <a th:href="@{|/rev/reviewPage?tno=${teacher.tno}|}" th:text="${teacher.name}"></a>
+                </li>
+            </ul>
+        </div>
+        <div class="review">
+            <!-- comment 등록 라인 -->
+            <!-- post 라인 -->
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="cmtWriter">anymore</span>
+                <br>
+                <input type="text" id="cmtText" class="form-control" placeholder="Add Comment..."
+                       aria-label="Username" aria-describedby="basic-addon1">
+                <button type="button" id="cmtAddBtn" class="btn btn-secondary">post</button>
+            </div>
+            <!-- spread 라인 -->
+            <!-- 댓글 목록 영역 -->
+            <ul class="list-group list-group-flush" id="cmtListArea">
+
+            </ul>
+        </div>
+
+        <!-- 수정 모달 -->
+        <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="myModalLabel">댓글 수정</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <input type="hidden" id="modifyCno">
+                        <div class="mb-3">
+                            <label for="modifyContent" class="form-label">내용</label>
+                            <textarea class="form-control" id="modifyContent" rows="3"></textarea>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
+                        <button type="button" class="btn btn-primary" id="saveModifyBtn">저장</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <script th:inline="javascript">
+            const tno = [[${tvo.tno}]];
+            console.log(tno);
+        </script>
         <script th:src="@{/js/reviewPage.js}"></script>
     </th:block>
 </th:block>
