--- a/www/www/src/main/resources/templates/teacher.html
+++ b/www/www/src/main/resources/templates/teacher.html
@@ -31,7 +31,7 @@
                     <!-- 제목 영역 -->
                     <h1><span class="pet_careText">펫 케어</span> 전문가님들을 소개합니다</h1>
                     <div class="big_teacher" id="big_teacher">
-                        <a id="bigImageLink" th:href="@{/rev/reviewPage?tno=1}">
+                        <a id="bigImageLink">
                             <div class="mainImage" id="mainImage">
                                 <!-- 클릭한 이미지가 이곳에 크게 표시됩니다 -->
                             </div>
