06/20, 댓글수 점수리뷰페이지 별점 수정

--- a/www/www/src/main/resources/templates/review/reviewPage.html
+++ b/www/www/src/main/resources/templates/review/reviewPage.html
@@ -37,8 +37,7 @@
                 <button type="button" id="cmtAddBtn" class="btn btn-secondary">post</button>
             </div>
             <div id="commentStats" class="mb-3">
-                <span id="commentCount"></span><span id="averageScore"></span>
-
+                <p id="commentCount"></p><p id="averageScore"></p>
             </div>
             <!-- spread 라인 -->
             <!-- 댓글 목록 영역 -->
