06/21, 리뷰페이지 로그인 닉네임

--- a/www/www/src/main/resources/templates/community/event.html
+++ b/www/www/src/main/resources/templates/community/event.html
@@ -32,28 +32,28 @@
                 <div class="fade_wrap">
                     <h2>공지</h2>
                     <img th:src="@{/dist/image/양주시.png}" alt="" class="pv_image">
-                    <p>2024 양주시 찾아가는 상담 지도실 신청자를 모집합니다</p>
+                    <p class="a">2024 양주시 찾아가는 상담 지도실 신청자를 모집합니다</p>
                 </div>
                 <div class="fade_wrap">
                     <h2>공지</h2>
                     <img th:src="@{/dist/image/건국대.png}" alt="" class="pv_image">
-                    <p>공지 [수강신청기간 연장]건국대학교 미래지식 교육원 전문교육 과정 PETVIP 펫 매니저 전문과정>강의 수강생 모집
+                    <p class="a"> 공지 [수강신청기간 연장]건국대학교 미래지식 교육원 전문교육 과정 PETVIP 펫 매니저 전문과정>강의 수강생 모집
                     </p>
                 </div>
                 <div class="fade_wrap">
                     <h2>공지</h2>
                     <img th:src="@{/dist/image/정기권.jpg}" alt="" class="pv_image">
-                    <p>연장[펫VIP]애견출장방문미용/목욕 서비스 정기권 5회, 10회 신청시 선물을 증정합니다 :)</p>
+                    <p class="a">연장[펫VIP]애견출장방문미용/목욕 서비스 정기권 5회, 10회 신청시 선물을 증정합니다 :)</p>
                 </div>
                 <div class="fade_wrap">
                     <h2>공지</h2>
                     <img th:src="@{/dist/image/런칭.jpg}" alt="" class="pv_image">
-                    <p>PETVIP 산책 그룹훈련& 1:1 산책 훈련 서비스 런칭🥳</p>
+                    <p class="a">PETVIP 산책 그룹훈련& 1:1 산책 훈련 서비스 런칭🥳</p>
                 </div>
                 <div class="fade_wrap">
                     <h2>공지</h2>
                     <img th:src="@{/dist/image/산책서비스.jpg}" alt="" class="pv_image">
-                    <p>[산책 베타 이벤트]산책 서비스 25% 할인 행사🐕‍🦺</p>
+                    <p class="a">[산책 베타 이벤트]산책 서비스 25% 할인 행사🐕‍🦺</p>
                 </div>
             </div>
         </div>
